--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <ol>
             <li><p><b>What is the name of this painting by Edvard Munch?</b></p></li>
-            <img src="main/images/thescream.png" width="400" height="500" alt="a expressive painting by Edvard Munch of a man with his mouth open in horror on a bridge in front of a red and orange sky with two figures in the background">
+            <img src="blob/main/images/thescream.png" width="400" height="500" alt="a expressive painting by Edvard Munch of a man with his mouth open in horror on a bridge in front of a red and orange sky with two figures in the background">
             <ul>
                 <li>A. The Yell</li>
                 <li>B. The Scream</li>
