--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
     
             <li><p><b>This iconic artwork by Shepard Fairey is based on which famous figure?</b></p></li>
-            <img src="/images/obeygiant.png" alt="Graphic by Shepard Fairey features up-close low detail image of a man's face and the word OBEY">
+            <img src="./images/obeygiant.png" alt="Graphic by Shepard Fairey features up-close low detail image of a man's face and the word OBEY">
             <ul>
                 <li>A. Andre the Giant</li>
                 <li>B. Andrew the Beast</li>
@@ -38,7 +38,7 @@
             </ul>
 
             <li><p><b>This corporate style artwork parody is based on what famous painting?</b></p></li>
-            <img src="/images/corpdevouringart.jpg" width="400" height="500" alt="corporate style artwork of a woman eating a small human">
+            <img src="./images/corpdevouringart.jpg" width="400" height="500" alt="corporate style artwork of a woman eating a small human">
             <ul>
                 <li>A. Garden of Earthly Delights by Hieronymus Bosch</li>
                 <li>B. Judith Slaying Holofernes by Artemisia Gentileschi</li>
@@ -54,6 +54,6 @@
             </ul>
         </ol>
         <h3>All done!</h3>
-        <a href="/answers.html">Check out the answers!</a>
+        <a href="./answers.html">Check out the answers!</a>
 </body>
 </html>
