--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
     
             <li><p><b>This iconic artwork by Shepard Fairey is based on which famous figure?</b></p></li>
-            <img src="https://raw.githubusercontent.com/talinodiff/art-challenge/main/images/obeygiant.png" alt="Graphic by Shepard Fairey features up-close low detail image of a man's face and the word OBEY">
+            <img src="./images/obeygiant.png" alt="Graphic by Shepard Fairey features up-close low detail image of a man's face and the word OBEY">
             <ul>
                 <li>A. Andre the Giant</li>
                 <li>B. Andrew the Beast</li>
