--- a/answers.html
+++ b/answers.html
@@ -19,6 +19,6 @@
             <li>B</li>
         </ol>
 
-        <a href="./index.html">Go back to quiz</a>
+        <a href="https://raw.githubusercontent.com/talinodiff/art-challenge/main/index.html">Go back to quiz</a>
     </body>
 </html>
