--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             </ul>
         </ol>
         <h3>All done!</h3>
-        <a href="./answers.html">Check out the answers!</a>
+        <p><a href="./answers.html">Check out the answers!</a></p>
+        <p><a href="./sources.html">Check out the sources!</a></p>
 </body>
 </html>
