--- a/sources.html
+++ b/sources.html
@@ -17,7 +17,9 @@
             <li><a href="https://knowyourmeme.com/photos/2014602-saturn-devouring-his-son" target="_blank">Source</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Mona_Lisa" target="_blank">Source</a></li>
         </ol>
+        <p><a href="https://www.w3schools.com/howto/howto_css_hero_image.asp" target="_blank">Reference for CSS and div tags</a></p>
+        <p><a href="https://www.w3schools.com/tags/att_a_target.asp" target="_blank">Reference for link target attribute</a></p>
 
-        <a href="./index.html">Go back to quiz</a>
+        <a href="./index.html" target="_blank">Go back to quiz</a>
     </body>
 </html>
