--- a/sources.html
+++ b/sources.html
@@ -19,6 +19,7 @@
         </ol>
         <p><a href="https://www.w3schools.com/howto/howto_css_hero_image.asp" target="_blank">Reference for CSS and div tags</a></p>
         <p><a href="https://www.w3schools.com/tags/att_a_target.asp" target="_blank">Reference for link target attribute</a></p>
+        <p><a href="https://www.w3schools.com/css/css_font.asp" target="_blank">Reference for font family</a></p>
 
         <a href="./index.html" target="_blank">Go back to quiz</a>
     </body>
